Test for LegacyService, LegacyDefendantAccountService and LegacyAccountDetailsResponseDto